# Mithras-Protocol

./: .dmypy.json  .gitignore  Cargo.toml  PROTOCOL.md  README.md  package.json  pnpm-lock.yaml  ubrn.config.yaml
.cargo/: config.toml
.github/workflows/: rust.yml  typescript.yml
__test__/: deposit.test.ts  merkle_path_verify.test.ts  merkle_rollover.test.ts  mimc.test.ts  mithras.test.ts  spend.test.ts
__test__/__snapshots__/: deposit.test.ts.snap  mithras.test.ts.snap  spend.test.ts.snap
__test__/circuits/: mimc.circom  mimc_sum4.circom
__test__/contracts/: MimcMerkleTest.algo.ts  mimc.algo.ts
__test__/contracts/clients/: MimcMerkleTest.ts  MimcTest.ts
__test__/utils/: contract-helpers.ts  test-utils.ts
ceremonies/test/: setup.sh
circuits/: deposit.circom  merkle_path_verify.circom  mimc.circom  spend.circom
contracts/: mimc_merkle.algo.ts  mithras.algo.ts
contracts/clients/: MimcMerkle.ts  MimcMerkleContract.ts  Mithras.ts
crates/mithras-crypto/: Cargo.toml
crates/mithras-crypto-ffi/: Cargo.toml
crates/mithras-crypto-ffi/src/: address.rs  hpke.rs  lib.rs  utxo.rs
crates/mithras-crypto/benches/: discovery_check.rs
crates/mithras-crypto/src/: address.rs  discovery.rs  hpke.rs  keypairs.rs  lib.rs  main.rs  utxo.rs
crates/mithras-discovery/: Cargo.toml
crates/mithras-discovery/src/: lib.rs  mimc.rs
crates/subscriber/: Cargo.toml
crates/subscriber/src/: lib.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
mithras-mobile/: Cargo.toml  Config.toml  README.md  build.rs  package-lock.json
mithras-mobile/MoproReactNativeBindings/MoproFfiFramework.xcframework/: Info.plist
mithras-mobile/MoproReactNativeBindings/android/: CMakeLists.txt
mithras-mobile/react-native/: .gitignore  Config.toml  README.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tsconfig.json
mithras-mobile/react-native/.github/workflows/: e2e.yml
mithras-mobile/react-native/MoproReactNativeBindings/: package.json  ubrn.config.yaml
mithras-mobile/react-native/MoproReactNativeBindings/android/: CMakeLists.txt  cpp-adapter.cpp
mithras-mobile/react-native/MoproReactNativeBindings/cpp/: mopro-ffi.cpp
mithras-mobile/react-native/MoproReactNativeBindings/src/: index.tsx
mithras-mobile/react-native/android/: link-assets-manifest.json  settings.gradle
mithras-mobile/react-native/android/app/: build.gradle
mithras-mobile/react-native/android/app/src/main/java/com/mithras/mobile/: MainActivity.kt  MainApplication.kt
mithras-mobile/react-native/android/app/src/main/res/values/: strings.xml
mithras-mobile/react-native/assets/keys/: deposit.zkey
mithras-mobile/react-native/ios/: Podfile  link-assets-manifest.json
mithras-mobile/react-native/ios/Mithras/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mithras-mobile/react-native/ios/Mithras.xcodeproj/: project.pbxproj
mithras-mobile/react-native/ios/Mithras.xcodeproj/xcshareddata/xcschemes/: Mithras.xcscheme
mithras-mobile/react-native/ios/Mithras.xcworkspace/: contents.xcworkspacedata
mithras-mobile/react-native/ios/Mithras.xcworkspace/xcuserdata/yared.xcuserdatad/: UserInterfaceState.xcuserstate
mithras-mobile/react-native/ios/Mithras.xcworkspace/xcuserdata/zhengyawen.xcuserdatad/: UserInterfaceState.xcuserstate
mithras-mobile/react-native/ios/MyTestLibraryExample/Images.xcassets/AppIcon.appiconset/: Contents.json
mithras-mobile/react-native/scripts/: sync-android-round-icons.mjs  sync-circom-zkeys.mjs
mithras-mobile/react-native/src/: App.tsx
mithras-mobile/react-native/src/components/: AppSafeArea.tsx  SpaceBackground.tsx
mithras-mobile/react-native/src/screens/: CircomProofScreen.tsx  HomeMenuScreen.tsx
mithras-mobile/react-native/src/screens/proofs/: DepositProofScreen.tsx  MultiplierProofScreen.tsx  SpendProofScreen.tsx
mithras-mobile/react-native/src/types/: mopro-ffi.d.ts
mithras-mobile/react-native/src/utils/: loadAssets.ts
mithras-mobile/src/: circom.rs  lib.rs
mithras-mobile/test-vectors/circom/: deposit.wasm  spend.wasm
mithras-mobile/tests/bindings/circom/: test_multiplier2.kts  test_multiplier2.swift
mithras-mobile/tests/bindings/ffi/: test_ffi_hello_world.kts  test_ffi_hello_world.swift
pkg/: mithras_crypto_ffi.ts
tools/uniffi-bindgen/: Cargo.toml
