[workspace]
members = [
    "crates/mithras-crypto", "crates/mithras-crypto-ffi", "crates/mithras-discovery", "crates/subscriber", "crates/test_utils", "tools/uniffi-bindgen"
]
resolver = "3"
exclude = [
    "rust_modules/wasm",
]


[workspace.dependencies]
uniffi = "0.29.4"
kmd_client = { git = "https://github.com/joe-p/algokit-core", branch = "fix/optional_genesis_timestamp" }
algod_client = { git = "https://github.com/joe-p/algokit-core", branch = "fix/optional_genesis_timestamp" }
algokit_transact = { git = "https://github.com/joe-p/algokit-core", branch = "fix/optional_genesis_timestamp" }
indexer_client = { git = "https://github.com/joe-p/algokit-core", branch = "fix/optional_genesis_timestamp" }

