[package]
name = "mithras-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
# HPKE API + Libcrux backend
hpke-rs = "0.3"
hpke-rs-libcrux = "0.3"

# RNG; the "js" feature makes randomness work in browsers/wasm
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

# Simple serialization helpers for an on-chain/off-chain envelope
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1.0.98"
ed25519-dalek = { version = "2.2.0", features = ["hazmat"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10.9"
hkdf = "0.12.4"
hmac = "0.12.1"
curve25519-dalek = { version = "4.1.3", features = ["legacy_compatibility"] }
bech32 = "0.11.0"
