[package]
name = "mithras-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
# HPKE API + Libcrux backend
hpke-rs = "0.3"
hpke-rs-libcrux = "0.3"

# RNG; the "js" feature makes randomness work in browsers/wasm
getrandom = { version = "0.3", features = ["wasm_js"] }

# Simple serialization helpers for an on-chain/off-chain envelope
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1.0.98"
ed25519-dalek = { version = "2.2.0", features = ["hazmat", "serde"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde"] }
sha2 = "0.10.9"
curve25519-dalek = { version = "4.1.3", features = ["legacy_compatibility"] }
bech32 = "0.11.0"
snafu = { version = "0.8.9", features = ["std"] }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.49.0", features = ["macros"] }
algod_client.workspace = true
kmd_client.workspace = true
algokit_transact.workspace = true
test_utils = { path = "../test_utils" }

[[bench]]
name = "discovery_check"
harness = false
