[package]
name = "mithras-discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
algod_client.workspace = true
algokit_transact.workspace = true
crossbeam-channel = "0.5.15"
ed25519-dalek = "2.2.0"
indexer_client.workspace = true
mithras-crypto = { version = "0.1.0", path = "../mithras-crypto" }
num-bigint = "0.4.6"
num-traits = "0.2.19"
sha2 = "0.10.9"
subscriber = { version = "0.1.0", path = "../subscriber" }
x25519-dalek = "2.0.1"
