[package]
name = "subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
algokit_transact = { git = "https://github.com/algorandfoundation/algokit-core", branch = "fix/block_logs" }
algod_client = { git = "https://github.com/algorandfoundation/algokit-core", branch = "fix/block_logs" }
indexer_client = { git = "https://github.com/algorandfoundation/algokit-core", branch = "fix/block_logs" }
crossbeam-channel = "0.5.15"
base64 = "0.22.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.48.0", features = ["macros"] }
