[package]
name = "subscriber"
version = "0.1.0"
edition = "2024"

[dependencies]
algokit_transact.workspace = true
algod_client.workspace = true
indexer_client.workspace = true
crossbeam-channel = "0.5.15"
base64 = "0.22.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1.48.0", features = ["macros"] }
