[package]
name = "test_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
kmd_client = { git = "https://github.com/joe-p/algokit-core", branch = "fix/optional_genesis_timestamp" }
algod_client = { git = "https://github.com/joe-p/algokit-core", branch = "fix/optional_genesis_timestamp" }
anyhow = "1.0.100"
tokio = "1.49.0"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros"] }

